--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
       <br />
       <p id="txt_name"><b>MANMEET</b> SINGH</p>
       <br />
+
+      <!-- <hr /> -->
+      <p align="center" id="title">software engineer</p>
+      <hr />
     </header>
-    <hr />
-    <p align="center" id="title">software engineer</p>
-    <hr />
     <main>
       <article id="left">
         <section>
@@ -41,8 +42,10 @@
 
           <b>Space Shoot</b>
           <ul>
-            <li><b>Tech used: </b>pygame, github, vscode</li>
-            <li>
+            <li class="project_description">
+              <b>Tech used: </b>pygame, github, vscode
+            </li>
+            <li class="project_description">
               <b>Description: </b>1v1 shootdown between Spaceships and one to
               last wins ->
               <a
@@ -54,10 +57,12 @@
             </li>
           </ul>
 
-          <b>boat bot</b>
+          <b>Boat bot</b>
           <ul>
-            <li><b>Tech used: </b>Python, Replit, beautifulsoup</li>
-            <li>
+            <li class="project_description">
+              <b>Tech used: </b>Python, Replit, beautifulsoup
+            </li>
+            <li class="project_description">
               <b>Description: </b>telegram bot that scrapes data about boats and
               presents it in telegram
             </li>
